# job-tracker

./: .flaskenv  .gitignore  README.md  app.py  application_websites.md  migrate_data.py  models.py  prompts.py  pyproject.toml  railway.toml
migrations/versions/: 2b8a16362ee5_add_job_description_to_application.py  d2b908dec8c6_initial_schema.py
routes/: ai.py  analytics.py  applications.py
templates/: base.html  login.html
templates/analytics/: _jd_analyzer.html  _jd_result.html  _strategy_panel.html  index.html
templates/applications/: _ai_panel.html  _ai_result_fit.html  _ai_result_interview.html  _ai_result_skills.html  _event_row.html  _form.html  _row.html  _table_body.html  detail.html  index.html
