[project]
name = "jobtracker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.0",
    "flask-migrate>=4.0.0",
    "python-dotenv>=1.0.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.0",
    "pip>=26.0.1",
]
